# SchedSlackBot

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app_manifest.yml  deployment.yml  mypy.ini  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
sched_slack_bot/: app.py  controller.py
sched_slack_bot/data/: schedule_access.py
sched_slack_bot/data/mongo/: mongo_schedule_access.py
sched_slack_bot/model/: reminder.py  schedule.py  slack_body.py  slack_event.py
sched_slack_bot/reminder/: reminder.py  scheduler.py  sender.py  slack_sender.py
sched_slack_bot/utils/: find_block.py  find_block_value.py  fix_schedule_from_the_past.py  slack_typing_stubs.py
sched_slack_bot/views/: app_home.py  datetime_selector.py  input_block_with_block_id.py  reminder_blocks.py  schedule_blocks.py  schedule_dialog.py  schedule_dialog_block_ids.py  schedule_dialog_constants.py
test_sched_slack_bot/: test_controller.py
test_sched_slack_bot/data/mongo/: test_mongo_schedule_access.py
test_sched_slack_bot/model/: test_reminder.py  test_schedule.py
test_sched_slack_bot/reminder/: test_reminder.py  test_scheduler.py  test_slack_sender.py
test_sched_slack_bot/utils/: test_find_block_value.py  test_fix_schedule_from_the_past.py
test_sched_slack_bot/views/: test_schedule_dialog.py
