[tool.poetry]
name = "schedslackbot"
version = "1.0.0"
description = "A Slack-Bot for managing rotating schedules"
authors = ["Daniel Draper <Germandrummer92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "pytest-cov"
mypy = "flake8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
