[tool.poetry]
name = "schedslackbot"
version = "1.0.0"
description = "A Slack-Bot for managing rotating schedules"
authors = ["Daniel Draper <Germandrummer92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = ">=1.10.0,<2.0.0"
pymongo = ">=4.0,<5.0"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5,<7.0.0"
coveralls = ">=3.0.0,<4.0.0"
mypy = ">=0.910,<1.0.0"
flake8 = ">=4.0.0,<5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
