[tool.poetry]
name = "schedslackbot"
version = "1.0.0"
description = "A Slack-Bot for managing rotating schedules"
authors = ["Daniel Draper <Germandrummer92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = ">=1.10.0,<2.0.0"
pymongo = { extras = ["srv"], version = "^4.5.0" }
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^23.7.0" }
pytest = ">=6.2.5,<8.0.0"
coveralls = ">=3.0.0,<4.0.0"
mypy = ">=0.910,<2.0.0"
flake8 = ">=4.0.0,<7.0.0"
pre-commit = "^3.4.0"

[tool.black]
line-length = 128
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = 'pymongo.*'
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
